fixed overflow without x hidden on body

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -21,10 +21,6 @@ html {
   hyphens: auto;
 }
 
-body {
-  @apply overflow-x-hidden;
-}
-
 @responsive {
   .row {
     @apply -mx-3 w-row flex flex-row flex-wrap;
